--- a/gerencia/templates/gerencia/index.html
+++ b/gerencia/templates/gerencia/index.html
@@ -73,6 +73,11 @@
                         </form>
                     </div>
                 </div>
+                
+                <form method="GET">
+                    {{ form.as_p }}
+                    <button type="submit">Buscar</button>
+                </form>
 
                 <!-- Categories widget-->
                 <div class="card mb-4">
