--- a/gerencia/templates/gerencia/index.html
+++ b/gerencia/templates/gerencia/index.html
@@ -89,12 +89,26 @@
                                     {% for categoria in categorias %}
                                         <li>
                                             <a href="{% url 'editar_categoria' categoria.id %}">
-                                                {{ categoria.nome }}
-                                                
+                                                {{ categoria.nome }}                                               
                                             </a>
                                         </li>
                                     {% endfor %}
                                 </ul>
+                                <div class="pagination">
+                                    <span class="step-links">
+                                        {% if categorias.has_previous %}
+                                            <a href="?page=1">&laquo; primeira</a>
+                                            <a href="?page={{ categorias.previous_page_number }}">anterior</a>
+                                        {% endif %}
+                                            <span class="current">
+                                                Página {{ categorias.number }} de {{ categorias.paginator.num_pages }}
+                                            </span> 
+                                        {% if categorias.has_next %} 
+                                            <a href="?page={{ categorias.next_page_number }}">próxima</a>
+                                            <a href="?page={{ categorias.paginator.num_pages }}">última &raquo;</a>
+                                        {% endif %}
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
