--- a/gerencia/templates/gerencia/editar_categoria.html
+++ b/gerencia/templates/gerencia/editar_categoria.html
@@ -36,6 +36,7 @@
                 <span class="text">Salvar Categoria</span>
             </button>
         </form>
+        <a href="{% url 'excluir' categoria.id %}"><button class="btn btn-primary btn-icon-split">Excluir</button></a>
 
 
     </div>
